--- a/template1.html
+++ b/template1.html
@@ -1,6 +1,8 @@
-  Content of template1.html<br>
-  <button class="trackable" data-tealium='{"event":"button pressed", "button_name":"button1"}'>Button</button><br>
-  <input type="button" value="input button" data-tealium='{"event":"input pressed"}'><br>
-  <button data-tealium='{"event":"button pressed", "button_name":"button2"}'>
-    Button
-  </button><br>
+  <div>
+    Content of template1.html<br>
+    <button class="trackable" data-tealium='{"event":"button pressed", "button_name":"button1"}'>Button</button><br>
+    <input type="button" value="input button" data-tealium='{"event":"input pressed"}'><br>
+    <button data-tealium='{"event":"button pressed", "button_name":"button2"}'>
+      Button
+    </button><br>
+  </div>
