--- a/sample/index.html
+++ b/sample/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8">
   <title>Example - example-example38-production</title>
   <link href="animations.css" rel="stylesheet" type="text/css">
-  
 
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular-animate.js"></script>
+
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js"></script>
   <script src="tealium_data.js"></script>
   <script src="tealium.js"></script>
+  <script src="tealium_directive.js"></script>
   <script src="script.js"></script>
-  
 
-  
+
 </head>
 <body ng-app="App">
 
    <div ng-controller="AppController">
-    
+
    <select ng-model="template" ng-options="t.name for t in templates" ng-change="updatePath()">
     <option value="">(blank)</option>
    </select>
