added a few more buttons for utag.link sample

--- a/sample/template1.html
+++ b/sample/template1.html
@@ -1,8 +1,8 @@
   <div>
     Content of template1.html<br>
-    <button class="trackable" data-tealium='{"event":"button pressed", "button_name":"button1"}'>Button</button><br>
+    <button class="trackable" data-tealium='{"event":"button pressed", "button_name":"button1"}'>Button 1</button><br>
     <input type="button" value="input button" data-tealium='{"event":"input pressed"}'><br>
-    <button data-tealium='{"event":"button pressed", "button_name":"button2"}'>
-      Button
-    </button><br>
+    <button data-tealium='{"event":"button pressed", "button_name":"button2"}'> Button 2 </button><br>
+    <button id="123" data-tealium='{"trackable" : "yes"}'>Test Trackable</button><br>
+    <button id="1234">Test Not Trackable</button>
   </div>
