consolidating files and bower updates

--- a/sample/index.html
+++ b/sample/index.html
@@ -7,9 +7,7 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
-  <script src="./tealium_data.js"></script>
-  <script src="./tealium.js"></script>
-  <script src="./tealium_directive.js"></script>
+  <script src="./tealium_angular.js"></script>
   <script src="./script.js"></script>
 </head>
 
